CXBOX-1039 | Add statsBlock parent/child